# serializer version: 1
# name: test_e2e_sample_project[fullstack_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 0,
      'passed_tests': list([
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[go_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 2,
      'passed_tests': list([
        'TestAdd',
        'TestMultiply',
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'model': '',
    'node_test_summary': None,
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[node_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 0,
      'passed_tests': list([
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[python_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 2,
      'passed_tests': list([
        'tests/test_app.py::test_add',
        'tests/test_app.py::test_multiply',
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'success': True,
  })
# ---
# name: test_e2e_sample_project[python_with_failing_test]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': dict({
      'failed_count': 1,
      'failed_tests': list([
        'tests/test_app.py::test_impossible',
      ]),
      'passed_count': 2,
      'passed_tests': list([
        'tests/test_app.py::test_add',
        'tests/test_app.py::test_multiply',
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'success': False,
  })
# ---
# name: test_e2e_sample_project[rust_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': None,
    'success': False,
  })
# ---
# name: test_e2e_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying timestamp helper script.',
        'Creating devcontainer.json with build configuration.',
        'Creating Dockerfile with C++ build environment and vcpkg for dependency management.',
        'Creating run_all_tests.sh script to execute CMake/CTest test suite.',
        'Creating .dockerignore to optimize build context.',
        'Building Docker image to test the setup.',
        'Running tests in the built container.',
        'Running second build to verify layer caching works correctly.',
      ]),
      'summary': 'All tests pass successfully. The dev container uses Ubuntu 22.04 with CMake, vcpkg for dependency management (fmt library), and CTest for testing. Build artifacts are cached in Docker layers for fast rebuilds. Key insight: C++ projects with vcpkg benefit greatly from building dependencies and source code directly in the Dockerfile to cache compilation artifacts, reducing test execution time to seconds.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test_greeter::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[fullstack_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating devcontainer.json, Dockerfile, and run_all_tests.sh for Python + Node.js polyglot project.',
        'Building the dev container image to verify the setup.',
        'Build failed due to uv venv/pip command issue. Fixing Dockerfile to use proper uv syntax.',
        'Image built successfully. Running tests to verify functionality.',
        'Running final verification test to ensure repeatability.',
        'Successfully created and verified dev container setup for polyglot Python+Node.js project.',
      ]),
      'summary': 'All tests pass successfully. This polyglot project required both Python and Node.js runtimes. The frontend tests spawn the Flask backend server and make API calls to test integration. Key tip: Using uv with `--python /venv` flag and UV_LINK_MODE=copy for Modal compatibility was essential for fast, reliable Python dependency installation.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'server_test::test_server_is_running',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_pass',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_also_passes',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::add via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::multiply via API',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[python_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory structure with devcontainer.json, Dockerfile, and run_all_tests.sh.',
        'Building dev container image to verify setup.',
        "Build failed due to lockfile issue. The uv.lock file needs to be updated. I'll modify the Dockerfile to not use --locked flag.",
        'Rebuilding dev container image with updated Dockerfile.',
        'Running tests in the container to verify everything works.',
        "Test run failed because pytest doesn't have coverage plugin. Removing the --no-cov flag from run_all_tests.sh.",
        'Rebuilding image with updated test script.',
        'Running tests again with the updated script.',
        'Verifying test artifacts were created correctly.',
        'Running final end-to-end verification.',
      ]),
      'summary': 'All tests pass successfully. The project uses Python 3.11 with pytest. UV package manager was used for fast dependency installation with pre-warmed cache. Removed --locked flag from uv sync since the lockfile needed updating. Simple project with only 2 basic tests.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
